# yamory-example-cargo

./: .gitignore
simple/: Cargo.toml
workspaces/: Cargo.toml
workspaces/project_a/: Cargo.toml
workspaces/project_b/: Cargo.toml
workspaces/project_lib/: Cargo.toml
workspaces/project_lib2/: Cargo.toml
