[package]
name = "yamory-example-cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "0.0.11"
named_borsh = { package = "borsh", version = "0.9.3" }
flatbuffers = "2.1.2"
libc = "0.2.146"
lz4-sys = "1.8.0"
ntpd = "0.1.1"
openssl-src = "110.0.7"
ouroboros = "0.15.6"
rand = "0.7.3"
