[package]
name = "project_a"
edition = "2024"

[dependencies]
project_lib = { path = "../project_lib" }
bam = "0.0.11"
named_borsh = { package = "borsh", version = "0.9.3" }
flatbuffers = "2.1.2"
libc = "0.2.146"
serde.workspace = true
regex = { workspace = true, optional = true }

[features]
regex = ["dep:regex"]

[dev-dependencies]
rand.workspace = true

[build-dependencies]
cc.workspace = true
